tests/configuration/invalid_environment/invalid_value/configuration/settings_json.py
from selva.configuration import environment as env

env.get_json("INVALID")
